# chatlytics-hermes

./: .MIGRATION-v0.11.0.md  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
.planning/: HERMES-API-AUDIT.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-CODE-REVIEW.md  v2.0-MILESTONE-PR-REVIEW.md
.planning/milestones/: v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/v2.0-phases/HERMES-01-upstream-contract-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-VERIFICATION.md
.planning/milestones/v2.0-phases/HERMES-02-outbound-text-control-parity/: 02-01-PLAN.md  02-REVIEW.md  02-VERIFICATION.md
.planning/milestones/v2.0-phases/HERMES-03-inbound-transport-migration/: 03-CONTEXT.md
.planning/milestones/v2.0-phases/HERMES-04-media-ux-polish-cron/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-REVIEW.md
.planning/milestones/v2.0-phases/HERMES-05-full-chatlytics-tool-surface/: 05-01-PLAN.md  05-CONTEXT.md  05-REVIEW.md  05-VERIFICATION.md
.planning/phases/HERMES-01-upstream-contract-scaffolding/: 01-CONTEXT.md  01-REVIEW.md
.planning/phases/HERMES-02-outbound-text-control-parity/: 02-01-SUMMARY.md  02-CONTEXT.md
.planning/phases/HERMES-03-inbound-transport-migration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/HERMES-04-media-ux-polish-cron/: 04-VERIFICATION.md
.planning/phases/HERMES-05-full-chatlytics-tool-surface/: 05-01-SUMMARY.md
.planning/phases/HERMES-06-release-smoke-test/: 06-CONTEXT.md  06-REVIEW.md
.planning/phases/HERMES-07-live-loader-integration-smoke-surfaces-bl-01/: 07-CONTEXT.md  07-PLAN-1-live-loader-test-harness.md
.planning/phases/HERMES-08-critical-safety-fixes-bl-01-blocker-hi-01-high-hi-03-high-as/: 08-CONTEXT.md  08-PLAN-1-critical-safety-fixes.md  08-VERIFICATION.md
.planning/phases/HERMES-09-observability-log-hygiene/: 09-CONTEXT.md  09-PLAN-1-log-hygiene-and-diagnostics.md  09-REVIEW.md
.planning/phases/HERMES-10-input-validation-ux-alignment/: 10-PLAN-1-validation-and-ux.md  10-REVIEW.md
.planning/phases/HERMES-11-test-infra-cleanup/: 11-REVIEW.md  11-VERIFICATION.md
.planning/phases/HERMES-12-release-v2-1-0/: 12-CONTEXT.md
.planning/phases/HERMES-13-get-chat-info-error-sentinel-breaking-tool-surface/: 13-PLAN-1-get-chat-info-error-sentinel.md  13-REVIEW.md
.planning/phases/HERMES-15-adapter-send-collapse-breaking-library-api/: 15-REVIEW.md  15-VERIFICATION.md
.planning/phases/HERMES-16-smoke-sh-wheel-caching-additive/: 16-PLAN-1-smoke-sh-wheel-caching.md  16-VERIFICATION.md
.planning/phases/HERMES-18-cosmetics-sweep-nits/: 18-CONTEXT.md  18-VERIFICATION.md
.planning/phases/HERMES-19-release-chatlytics-hermes-3-0-0-pypi/: 19-RELEASE-READY.md
.planning/phases/HERMES-20-js-bundle-update-for-v3-0-coordination/: 20-REVIEW.md
.planning/phases/HERMES-21-release-chatlytics-claude-code-1-2-0-npm/: 21-PLAN-1-npm-manifest-prep-and-dry-run.md  21-SUMMARY.md
docs/: BETA-INSTALL.md  approvals.md  configuration.md  features.md  install.md  troubleshooting.md
scripts/: smoke.sh  test.sh
src/chatlytics_adapter/: __init__.py  actions.py  adapter.py
src/chatlytics_hermes/: __init__.py  adapter.py  client.py  diagnostics.py  doctor.py  inbound.py  tools.py
tests/: _fixtures.py  conftest.py  test_action_parity.py  test_adapter.py  test_bot_token.py  test_concurrency.py  test_conftest_teardown.py  test_control.py  test_cron.py  test_inbound.py  test_kwargs_filter.py  test_live_loader.py  test_live_registry.py  test_longpoll.py  test_media.py  test_media_file_param.py  test_media_timeout.py  test_observability.py  test_onboarding.py  test_outbound.py  test_questions.py  test_register.py  test_smoke_cache.py  test_status_edit.py  test_survivability.py  test_tool_schemas.py  test_tools.py  test_validation.py
(+46 files in other folders)
