[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatlytics-hermes"
version = "2.1.0"
description = "Chatlytics WhatsApp platform plugin for Hermes Agent (v0.14+)"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Chatlytics", email = "dev@chatlytics.ai"}]
keywords = ["chatlytics", "hermes", "whatsapp", "adapter", "plugin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dependencies = [
    "hermes-agent>=0.14,<0.15",
    "httpx>=0.27,<1",
    "aiohttp>=3.9,<4",
    "PyYAML>=6.0",
    "jsonschema>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.entry-points."hermes_agent.plugins"]
chatlytics = "chatlytics_hermes:register"

[project.urls]
Homepage = "https://github.com/omernesh/chatlytics-hermes"
Repository = "https://github.com/omernesh/chatlytics-hermes"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
