[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatlytics-hermes"
version = "4.1.3"
description = "Production-grade WhatsApp for Hermes Agent — full upstream contract, 21 tools, every media type, per-bot bearer auth (chatlytics v4.0 Multi-Bot Platform)"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Chatlytics", email = "dev@chatlytics.ai"}]
keywords = ["chatlytics", "hermes", "whatsapp", "adapter", "plugin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dependencies = [
    "hermes-agent>=0.14,<1.0",
    "httpx>=0.27,<1",
    "aiohttp>=3.9,<4",
    "PyYAML>=6.0",
    "jsonschema>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.entry-points."hermes_agent.plugins"]
# Hermes' PluginManager imports the bare module and calls its module-level
# register(ctx). Must be the bare module path, NOT "chatlytics_hermes:register"
# (the colon form makes Hermes try to import an attribute named ``register``
# as a submodule and the plugin silently fails to load). Carried forward from
# hpg6's running tree (HERMES-compat fix #1).
chatlytics = "chatlytics_hermes"

[project.urls]
Homepage = "https://github.com/omernesh/chatlytics-hermes"
Repository = "https://github.com/omernesh/chatlytics-hermes"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
